--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@ztimson/utils": "^0.21.6",
     "express": "^4.21.1",
     "i2c-bus": "^5.2.3",
     "serialport": "^12.0.0"
