--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/main.js"
+    "apollo": "node src/main.js"
   },
   "author": "",
   "license": "MIT",
